<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cwsu.client.AddNewGateway">

    <EditText
        android:id="@+id/gateway_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/gateway_id"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />


    <Button
        android:id="@+id/add_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/submitBtn"
        android:textSize="30sp" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/cancelBtn"
        android:textSize="30sp" />

</LinearLayout>
