<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:text="帳號"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:hint="@string/user_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:text="密碼"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:hint="@string/user_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:onClick="Login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/action_sign_in"
                android:textSize="24sp"
                android:background="#3949ab"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <Button
                android:id="@+id/register_button"
                android:onClick="Register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/register"
                android:textSize="24sp"
                android:background="#3949ab"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/forget_password_button"
                android:onClick="ForgetPassword"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/forget_password"
                android:textSize="24sp"
                android:background="#3949ab"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="69dp"
                android:id="@+id/condition"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
