<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="帳號"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/signup_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/id"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="密碼"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/signup_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvComfirmPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="確認密碼"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/signup_confirm_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/confirmationpassword"
                    android:inputType="textPassword"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="姓名"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="Email"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="角色"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/signup_role_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textSize="25sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Cancel"
                    android:text="@string/cancelBtn"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/action_register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NextStep"
                    android:text="@string/submitBtn"
                    android:textSize="28sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
